--- a/main.css
+++ b/main.css
@@ -2,5 +2,5 @@ body {
     font-family: 'Courier New', Courier, monospace;
     background-color: azure;
     text-align: center;
-    //comentario
+    /*comentario*/
 }
